--- a/src/input.css
+++ b/src/input.css
@@ -203,15 +203,20 @@
   @apply tablet:scale-110 tablet:translate-x-3 transition duration-1000 ease-out;
 }
 
+/* individual filter */
+.filter-countdown {
+  filter: drop-shadow(0px 10px 100px rgba(241, 128, 128, 0.5));
+}
+
 /* section paket ---------------------------------------------------------------------------------------- */
 /* Card carousel */
 
 .paket {
-  @apply rounded-2xl overflow-hidden w-[100%] aspect-[2/4] 2xl:aspect-[2/3] tablet:aspect-[2/3] mobilexl:aspect-[2/4] flex flex-col;
+  @apply rounded-2xl overflow-hidden w-[100%] aspect-[2/4] 2xl:aspect-[2/3] tablet:aspect-[2/3] mobilexl:aspect-[2/4] mobile:aspect-[6/10] flex flex-col;
 }
 
 .paket-top {
-  @apply bg-bg-h flex justify-center items-end p-8 overflow-hidden min-h-[40%] relative;
+  @apply bg-bg-h flex justify-center items-end py-4 px-8 md:p-4 overflow-hidden min-h-[40%] relative;
 }
 
 /* mobilexl:h-[259px] tablet:h-[300px] h-[300px] */
@@ -223,7 +228,7 @@
 /* pl-11 xl:pl-14 pr-[50%] md:pr-[30%] */
 
 .paket-title {
-  @apply text-4xl md:text-5xl xl:text-4xl 2xl:text-5xl mb-2;
+  @apply text-3xl md:text-5xl xl:text-4xl 2xl:text-5xl mb-2;
 }
 
 .harga-coret {
@@ -231,36 +236,36 @@
 }
 
 .harga-now {
-  @apply block max-w-fit text-lg mobilexl:text-lg tablet:text-xl text-white bg-black py-1 px-3 rounded-lg;
+  @apply block max-w-fit text-base sm:text-lg md:text-xl text-white bg-black py-1 px-3 rounded-lg;
 }
 
 .paket-img {
-  @apply absolute -bottom-[2%] right-[0] w-[40%] xl:w-[40%];
+  @apply absolute -bottom-[2%] right-[0] w-[40%] xl:w-[40%] z-10;
 }
 
 .paket-diskon {
-  @apply absolute -top-[4%] -right-[12%] md:-top-[4%] md:-right-[10%] xl:-top-[3%] xl:-right-[12%] 2xl:-top-[5%] 2xl:-right-[9.5%] bg-diskon text-white pb-2 py-6 px-10 rotate-45;
+  @apply absolute -top-[4%] -right-[13%] md:-top-[4%] md:-right-[10%] xl:-top-[3%] xl:-right-[12%] 2xl:-top-[5%] 2xl:-right-[9.5%] bg-diskon text-white pb-2 py-6 px-10 rotate-45;
 }
 
 /* absolute -bottom-0 right-0 w-[40%] xl:w-[30%] */
 /* mobile:w-[90%] mobilexl:w-[60%] mobilexl:-mb-20 mobile:-mb-[6.5rem] lg:-mb-16 mobilexl:mr-5 */
 
 .paket-bottom {
-  @apply bg-gray-lighter  p-8 flex flex-col justify-between min-h-[60%];
+  @apply bg-gray-lighter px-4 py-4  md:p-8 flex flex-col justify-between min-h-[60%];
 }
 
 /* mobilexl:h-[287px] tablet:h-[350px] */
 
 .paket-ul {
-  @apply list-disc ml-6 mb-10;
+  @apply list-disc ml-6 mb-5 md:mb-10;
 }
 
 .paket-ul > li {
-  @apply mb-3 lg:mb-1 text-base md:text-xl xl:text-base 2xl:text-lg;
+  @apply mb-px lg:mb-1 text-base md:text-xl xl:text-base 2xl:text-lg;
 }
 
 .paket-btn {
-  @apply btn bg-black text-white xl:text-xl text-lg md:text-xl md:py-3 w-full py-2 text-center;
+  @apply btn bg-black text-white xl:text-xl text-lg md:text-xl md:py-3 w-full py-2 text-center hover:bg-white hover:text-black border-2 hover:border-black transition-300ms;
 }
 
 /* note for future me:
